<resources>
    <string name="app_name">Ordinary°</string>
    <string name="action_settings">设置</string>
    <string name="action_statistics">统计</string>
    <string name="action_wallet">钱包</string>
    <string name="settings_category_theme">主题</string>
    <string name="theme_color">主题颜色</string>
    <string name="dark_theme">深色主题</string>
    <string name="theme_color_system">系统主题颜色</string>
    <string name="settings_category_about">关于</string>
    <string name="settings_about_app">关于软件</string>
    <string name="settings_about_author">关于作者</string>

    <string name="appbar_scrolling_view">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pure_black_dark_theme_summary">当深色主题启用时使用纯黑主题</string>
    <string name="pure_black_dark_theme">纯黑主题</string>


    <!--主页面内容-->
    <string name="month_money_out">本月支出</string>
    <string name="month_money_in">本月收入</string>
    <string name="budget_remain">预算剩余</string>
    <string name="balance_month">本月结余</string>

    <!--记录页面-->
    <string name="add_remark">点击此处添加备注...</string>
    <string name="please_input_time">时间(24小时制)</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="time">修改时间</string>
    <string name="back_date">返回日期</string>


    <string name="dark_theme_off">总是关闭</string>
    <string name="dark_theme_on">总是开启</string>
    <string name="follow_system">跟随系统</string>

</resources>